fix(modal): hide overflow

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -314,6 +314,8 @@ p, div, span {
 
 .modal {
   border-radius: 5px;
+  overflow: hidden;
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
 }
 
 .modal .bar-header {
@@ -486,3 +488,4 @@ textarea {
 .modal.card-modal {
   height: 296px;
 }
+
